2008-01-06 dangelo
        * src/enfuse.h: Improved performace of HardMask parameter, added
        CacheFileImage verbose output

        * src/enblend.h: Compile only 8 bit paths when DEBUG_8BIT_ONLY is
        defined. 

	* src/vigra_impex/jpeg.cxx: Set default jpeg quality to 98.

2007-12-21 dangelo

	* configure.in, src/Makefile.am: removed -g from default compilation flags

	* src/enfuse.h, src/enfuse.cc, src/enfuse.1: Implemented variance based
	local contrast criteria, works great on focus stacks. Further work is
	needed for images with alpha channel. Only calcuate criteria that are
	non-zero
	
	* include/vigra/inspectimage.hxx: Fixed a compiler warning (was not a bug)

	* include/vigra/impex.hxx: Disable automatic rescaling when saving
	images to files with different bit depth.

2007-12-05 dangelo

	* configure.in: turned some warnings into errors

2007-11-25 dangelo

	* enblend_msvc2003.sln, src/enblend_msvc2003.vcproj,
	src/enfuse_msvc2003.vcproj,
	src/vigra_impex/vigra_impex_msvc2003.vcproj: Up to date project files
	for building with MSVC 2003

	* configure.in, src/win32helpers/win32config: updated version number
	to 3.1

	* src/anneal.h, src/assemble.h, src/vigra_impex/exr.cxx,
	src/vigra_impex/png.cxx: fixes for MSVC compilation
	
	* AUTHORS, READMEWIN: small documentation updates

2007-10-31  dangelo

	* configure.in: removed check for ext/slist in configure

2007-10-22  dangelo

	* src/enblend.cc: added --compression option to allow more
	detailed specification of the compression type and quality
	(especially for jpeg output)

2007-10-14  dangelo

	* src/enblend.cc: extended -f option to allow specification
	of top and left of the output image

2007-08-12  dangelo

	* src/vigra_impex: exr.hxx exr.cxx: Added OpenEXR codec (forgot
	  to add last time)

2007-08-05 11:20 dangelo

        * src/assemble.h: output final image without mask if
	  output format does not support alpha channels (JPG output)

2007-08-05 10:23 dangelo
