@@ -1,3 +1,11 @@
+2008-01-07 dangelo
+	* include/vigra_ext/cachedfileimage.hxx,
+	include/vigra_ext/stdcachedfileimage.hxx: Removed old implementations.
+
+	* include/vigra/cachedfileimage.hxx: Use Win32 temp file functions,
+	fixes enfuse bug that prevented using more than a few source images
+	with enfuse.
+
 2008-01-06 dangelo
         * src/enfuse.h: Improved performace of HardMask parameter, added
         CacheFileImage verbose output
